--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,16 @@ code {
   display: none!important;
 }
 
+.limit-width {
+  display: block;
+  max-width: 500px !important;
+  margin: auto;
+}
+
+.home-page-btn{
+  min-width: 20vw;
+}
+
 @media (max-width: 768px) {
   .landing-logo {
     margin: auto;
